src/utils/snapshots/reconcile__utils__myers_diff__tests__complex_diff.snap
---
source: src/utils/myers_diff.rs
expression: result
snapshot_kind: text
---
[
    Equal(
        [
            Token {
                normalized: "a",
                original: "a",
                is_left_joinable: true,
                is_right_joinable: true,
            },
        ],
    ),
    Insert(
        [
            Token {
                normalized: "x",
                original: "x",
                is_left_joinable: true,
                is_right_joinable: true,
            },
        ],
    ),
    Delete(
        [
            Token {
                normalized: "b",
                original: "b",
                is_left_joinable: true,
                is_right_joinable: true,
            },
        ],
    ),
    Equal(
        [
            Token {
                normalized: "c",
                original: "c",
                is_left_joinable: true,
                is_right_joinable: true,
            },
        ],
    ),
    Insert(
        [
            Token {
                normalized: "y",
                original: "y",
                is_left_joinable: true,
                is_right_joinable: true,
            },
        ],
    ),
    Delete(
        [
            Token {
                normalized: "d",
                original: "d",
                is_left_joinable: true,
                is_right_joinable: true,
            },
        ],
    ),
]
