src/utils/snapshots/reconcile__utils__myers_diff__tests__delete_only.snap
---
source: src/utils/myers_diff.rs
expression: result
---
[
    Delete(
        [
            Token {
                normalised: "a",
                original: "a",
                is_left_joinable: true,
                is_right_joinable: true,
            },
        ],
    ),
    Delete(
        [
            Token {
                normalised: "b",
                original: "b",
                is_left_joinable: true,
                is_right_joinable: true,
            },
        ],
    ),
]
