src/utils/snapshots/reconcile__utils__myers_diff__tests__identical_content.snap
---
source: src/utils/myers_diff.rs
expression: result
---
[
    Equal(
        [
            Token {
                normalised: "a",
                original: "a",
                is_left_joinable: true,
                is_right_joinable: true,
            },
        ],
    ),
    Equal(
        [
            Token {
                normalised: "b",
                original: "b",
                is_left_joinable: true,
                is_right_joinable: true,
            },
        ],
    ),
    Equal(
        [
            Token {
                normalised: "c",
                original: "c",
                is_left_joinable: true,
                is_right_joinable: true,
            },
        ],
    ),
]
