src/utils/snapshots/reconcile__utils__myers_diff__tests__insert_only.snap
---
source: src/utils/myers_diff.rs
expression: result
---
[
    Insert(
        [
            Token {
                normalised: "a",
                original: "a",
                is_left_joinable: true,
                is_right_joinable: true,
            },
        ],
    ),
    Insert(
        [
            Token {
                normalised: "b",
                original: "b",
                is_left_joinable: true,
                is_right_joinable: true,
            },
        ],
    ),
]
